--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,10 @@
   <artifactId>123456-STIW3054-Issues</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>123456-STIW3054-Issues</name>
+         
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+         
 </project>
